--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "jest": "^27.5.1",
+    "jest-junit": "^13.0.0",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
